--- a/css/style-green.css
+++ b/css/style-green.css
@@ -497,8 +497,9 @@ a:hover {
 }
 
 .navbar-b .navbar-brand {
+  margin: 10px;
   color: #fff;
-  font-size: 1.6rem;
+  font-size: 2.0rem;
   font-weight: 600;
 }
 
@@ -611,6 +612,9 @@ a:hover {
   opacity: .9;
 }
 
+.subtitles {
+  margin-left:200px;
+}
 .intro .intro-title {
   color: #fff;
   font-weight: 600;
@@ -756,7 +760,9 @@ a:hover {
 /*======================================
 //--//-->   PORTFOLIO
 ======================================*/
-
+.title2 {
+  margin: 20px;
+}
 .work-box {
   margin-bottom: 3rem;
   -webkit-backface-visibility: hidden;
@@ -764,9 +770,18 @@ a:hover {
   background-color: #fff;
 }
 
+.work-box2 {
+  margin-bottom: 3rem;
+}
+
+.col-md-4-h {
+  width: 300px;
+}
+
+
 .work-box:hover img {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .work-img {
@@ -775,7 +790,7 @@ a:hover {
 }
 
 .work-img img {
-  transition: all 1s;
+  transition: all 1.2s;
 }
 
 .work-content {
